# Projet_ocr

./: .dockerignore  .env.local.demo  .gitignore  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_FILE_BY_FILE.md  IMPLEMENTATION_V6_NOTES.md  Makefile  README.md  README_DEV.md  README_MODIFICATIONS.md  alembic.ini  docker-compose.yml  gen.py  pyproject.toml  pytest.ini  requirements-gpu-cu121.txt  requirements.txt
ResultatTest/: cin_tn_results.json  global_summary.json  invoice_logistics_results.json  invoice_results.json  midv2020_results.json  passport_tn_results.json
app/: docker-compose.yaml  main.py  test_monitoring.py
app/api/: deps.py  middleware.py  rate_limiter.py
app/classifiers/: doc_family_classifier.py  layout_variant_classifier.py  swin_classifier.py
app/config/: ocr_profiles.py  runtime.py
app/core/: encryption.py  errors.py  logging.py  metrics.py  rbac.py  security.py  settings.py  tenant.py
app/db/: base.py  migrate_yaml_to_pg.py  session.py
infra/: prometheus.yml
migrations/: env.py
scripts/: approve_operator.py  benchmark_documents.py  benchmark_global_final.py  benchmark_invoices.py  benchmark_passports.py  debug_yolo_label.py  generate_encryption_key.py  list_pending_operators.py  migrate_history_details.py  migrate_history_user_columns.py  run_full_benchmark.py  seed_admin.py  setup_enterprise.py
tests/: conftest.py  test_api.py  test_document_normalizer.py  test_enterprise.py  test_midv2020_prepare.py  test_roi_template_extraction.py  test_services.py
(+446 files in other folders)
